# Aerial-Robotics-Project

./: .gitignore  11  Makefile  install_dronecourse.sh
.circleci/: .config.yml
Tools/: autofix_bad_commit.sh  dronecourse_bootstrap.sh  dronecourse_discard_old_versions.sh  dronecourse_docker_run.sh  dronecourse_gzclient_run.sh  dronecourse_install_docker.sh  dronecourse_make_report.sh  dronecourse_platform.sh  dronecourse_publish.sh  dronecourse_run_all.sh  dronecourse_student_push.sh  dronecourse_supervisor.sh  show-waypoints-test.sh  show-waypoints.sh  update-git-config.sh
Tools/simsupervisor/: CMakeLists.txt  simsupervisor.cc
Tools/sitl_gazebo/: .gitignore  CMakeLists.txt
Tools/sitl_gazebo/include/: gazebo_gimbal.hpp  gazebo_mavlink_interface.h  gazebo_mavlink_plugin.h  gazebo_platform_plugin.h  gazebo_target_camera_plugin.h  gazebo_truck_plugin.h  gazebo_waypoint_plugin.h
Tools/sitl_gazebo/msgs/: GimbalCommand.proto  TargetPositionImage.proto  lidar.proto  waypoint.proto
Tools/sitl_gazebo/platform-proto/: README.md  platform.proto  platformLanding.proto
Tools/sitl_gazebo/src/: gazebo_gimbal.cpp  gazebo_lidar_plugin.cpp  gazebo_mavlink_interface.cpp  gazebo_mavlink_plugin.cpp  gazebo_platform_plugin.cpp  gazebo_target_camera_plugin.cpp  gazebo_truck_plugin.cpp  gazebo_waypoint_plugin.cpp
Tools/sitl_gazebo/worlds/: dronecourse-eval.world  dronecourse.world
cmake/common/: px4_base.cmake
cmake/configs/: posix_sitl_dronecourse.cmake  posix_sitl_dronecourse_common.cmake  posix_sitl_dronecourse_dev.cmake  posix_sitl_dronecourse_dev_shell.cmake  posix_sitl_dronecourse_shell.cmake
msg/: CMakeLists.txt  dronecourse_platform_position.msg  dronecourse_status.msg  dronecourse_timeouts.msg  dronecourse_truck_position.msg  dronecourse_velocity_setpoint.msg  dronecourse_waypoint.msg  gimbal_command.msg  platform_landing.msg  target_position_image.msg  target_position_ned.msg  target_position_ned_filtered.msg  vehicle_local_position_setpoint.msg
src/dronecourse/: dronecourse_utils.h
src/dronecourse/controllers/: BaseCtrl.cpp  BaseCtrl.hpp  CMakeLists.txt  DronecourseHandler.cpp  DronecourseHandler.hpp  GimbalCtrl.cpp  (+13 more)
tp_eval/: Random_platform_and_truck_positions.xlsx  batch_evaluate.sh  evaluate.py  evaluation.xlsx  log_analysis_example.ipynb  log_analysis_landing.ipynb  log_analysis_waypoint.ipynb  set_platform_truck_position.py
(+85 files in other folders)
